# rv8

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  TODO.md  engine.rs  lib.rs  main.rs  patch.diff  readme.md
.agents/skills/rv8/: SKILL.md
.agents/skills/rv8/agents/: openai.yaml
.cargo/: config.toml
.claude/: ecc-tools.json  identity.json
.claude/homunculus/instincts/inherited/: rv8-instincts.yaml
.codex/: AGENTS.md
.github/workflows/: ci.yml
.pi-subagents/artifacts/: 03610756_worker_0_input.md  03610756_worker_0_meta.json  03610756_worker_0_output.md  03610756_worker_0_transcript.jsonl
benches/: rendering.rs
compositor/: mod.rs
core/: browser.rs  config.rs  navigation.rs  process_manager.rs  process_manager.rs.orig  tab.rs
crates/rv8_browser_optimizations/: Cargo.toml  driver_catalog.rs  lib.rs
docs/: engine-architecture-memo.md
ipc/: messages.rs  mod.rs
js/: bindings.rs  engine.rs  inspector.rs  mod.rs  soliloquy.rs  worker.rs
networking/: mod.rs  websocket.rs
optimizations/: memory.rs  mod.rs  preload.rs  v8_opts.rs
patches/serde_fmt/: Cargo.toml
patches/serde_fmt/src/: lib.rs
renderer/: mod.rs  process.rs
rv8_sync/: mod.rs
servo_embed/: dom.rs  embedder_polyfills.rs  mod.rs  paint.rs  parser.rs  servo_renderer.rs  viewport.rs  web_apis.rs
storage/: cookie.rs  error.rs  indexeddb.rs  mod.rs  profile.rs  session.rs
tests/: web_api_live.rs
