[package]
name = "rv8"
version = "0.1.0"
edition = "2021"
description = "rv8, a modern browser engine with Servo rendering and V8 JavaScript"
license-file = "LICENSE"
rust-version = "1.75.0"
authors = ["Max Carter <max@undivisible.dev>"]
repository = "https://github.com/tschk/rv8"
keywords = ["browser", "servo", "v8", "webengine", "rendering"]
categories = ["web-programming", "rendering", "gui"]

[lib]
name = "rv8"
path = "lib.rs"

[[bin]]
name = "rv8"
path = "main.rs"

[[bin]]
name = "viewportd"
path = "src/bin/viewportd.rs"
required-features = ["servo-render"]

[[bin]]
name = "rv8-chrome"
path = "src/bin/rv8-chrome.rs"
required-features = ["chrome"]

[dependencies]
# V8 JavaScript Engine
rusty_v8 = { version = "0.32", optional = true }

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async runtime
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "fs", "net", "io-util", "macros"] }

# gpui
gpui = { version = "=0.2.2", optional = true, default-features = false, features = ["font-kit"] }
crepuscularity-gpui = { path = "../crepuscularity/crates/crepuscularity-gpui", optional = true }

# Networking
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "cookies", "gzip", "brotli"] }
url = "2.5"
http = "1.0"
bytes = "1.5"

# HTML/CSS Parsing (lightweight, before Servo integration)
html5ever = "0.29"

# Storage
sled = "0.34"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# IPC
ipc-channel = "0.18"

# Performance
parking_lot = "0.12"
sysinfo = "0.30"

# System calls
nix = { version = "0.27", features = ["sched"] }
num_cpus = "1.16"
dirs = "6"

# Servo layout/CSS/WebRender (rv8-owned engine checkout)
servo = { path = "third_party/servo/components/servo", default-features = false, features = ["baked-in-resources", "clipboard", "soliloquy_v8"], optional = true }
dpi = { version = "0.1", optional = true }
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "std"], optional = true }
servo-embedder-traits = { path = "third_party/servo/components/shared/embedder", optional = true }

# Platform-specific
[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", optional = true }
wayland-client = { version = "0.31", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc2 = "0.5"

[features]
default = ["multi-process", "servo-render"]
multi-process = []
single-process = []
x11 = ["x11rb"]
wayland = ["wayland-client"]
gpu-compositing = []
hardware-acceleration = []
servo-render = ["dep:servo", "dep:dpi", "dep:rustls", "dep:servo-embedder-traits"]
rv8-v8 = ["dep:rusty_v8"]
chrome = ["dep:gpui", "dep:crepuscularity-gpui"]

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.release-with-debug]
inherits = "release"
debug = true
