[package]
name = "rv8"
version = "0.0.133"
edition = "2021"
description = "rv8, a modern browser engine with Servo rendering and V8 JavaScript"
license-file = "LICENSE"
rust-version = "1.75.0"
authors = ["Max Carter <max@undivisible.dev>"]
repository = "https://github.com/tschk/rv8"
keywords = ["browser", "servo", "v8", "webengine", "rendering"]
categories = ["web-programming", "rendering", "gui"]

[lib]
name = "rv8"
path = "lib.rs"

[[bin]]
name = "rv8"
path = "main.rs"

[[bin]]
name = "viewportd"
path = "src/bin/viewportd.rs"
required-features = ["servo-render"]

[[bin]]
name = "rv8-chrome"
path = "src/bin/rv8-chrome.rs"
required-features = ["chrome"]

[[test]]
name = "web_api_live"
path = "tests/web_api_live.rs"
required-features = ["rv8-v8"]

[dependencies]
# V8 JavaScript Engine
rusty_v8 = { version = "0.32", optional = true }

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async runtime
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "fs", "net", "io-util", "macros"] }

# gpui
gpui = { version = "=0.2.2", optional = true, default-features = false, features = ["font-kit"] }
crepuscularity-gpui = { path = "../crepuscularity/crates/crepuscularity-gpui", optional = true }

# Networking
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "cookies", "gzip", "brotli"] }
url = "2.5"
http = "1.0"
bytes = "1.5"

# HTML/CSS Parsing (lightweight, before Servo integration)
html5ever = "0.29"

# Storage
sled = "0.34"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# IPC
ipc-channel = "0.18"

# Browser optimizations crate
rv8_browser_optimizations = { path = "crates/rv8_browser_optimizations" }

# Performance
parking_lot = "0.12"
sysinfo = "0.30"

# System calls
nix = { version = "0.27", features = ["sched"] }
num_cpus = "1.16"
dirs = "6"
image = { version = "0.25", default-features = false, features = [] }

# Servo layout/CSS/WebRender (rv8-owned engine checkout)
servo = { path = "third_party/servo/components/servo", default-features = false, features = ["baked-in-resources", "clipboard", "soliloquy_v8"], optional = true }
dpi = { version = "0.1", optional = true }
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "std"], optional = true }
servo-embedder-traits = { path = "third_party/servo/components/shared/embedder", optional = true }
keyboard-types = { version = "0.8.3", optional = true }

# Platform-specific
[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", optional = true }
wayland-client = { version = "0.31", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc2 = "0.5"
objc2-core-foundation = { version = "0.3", optional = true }
core-video = { version = "0.4.3", optional = true }
core-foundation = { version = "0.10", optional = true }
io-surface = { version = "0.16", optional = true }
surfman = { version = "0.13.0", default-features = false, optional = true }
gleam = { version = "0.15.1", optional = true }
glow = { version = "0.17.0", optional = true }
euclid = { version = "0.22.14", optional = true }

[features]
# servo-render is opt-in until the Servo V8 bridge (js_stub ↔ script_bindings codegen) is synced.
default = ["multi-process"]
multi-process = []
single-process = []
x11 = ["x11rb"]
wayland = ["wayland-client"]
gpu-compositing = []
hardware-acceleration = []
servo-render = [
    "dep:servo",
    "dep:dpi",
    "dep:rustls",
    "dep:servo-embedder-traits",
    "dep:keyboard-types",
    "dep:objc2-core-foundation",
    "dep:core-video",
    "dep:core-foundation",
    "dep:io-surface",
    "dep:surfman",
    "dep:gleam",
    "dep:glow",
    "dep:euclid",
]
rv8-v8 = ["dep:rusty_v8"]
chrome = ["dep:gpui", "dep:crepuscularity-gpui", "crepuscularity-gpui/symbols"]

[patch.crates-io]
serde_fmt = { path = "patches/serde_fmt" }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.release-with-debug]
inherits = "release"
debug = true
